Bug 28704 - %s substituted with "static member"/"free" can't be properly translated
Summary: %s substituted with "static member"/"free" can't be properly translated
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 4.1.1
: P3 minor
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords: diagnostic
Depends on:
Blocks:
 
Reported: 2006-08-12 20:47 UTC by Göran Uddeborg
Modified: 2006-10-30 23:33 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2006-08-13 16:33:55


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Göran Uddeborg 2006-08-12 20:47:27 UTC
In cp/decl.c there is this code.

  error ("qualified function types cannot be used to declare %s functions",
	 (staticp? "static member" : "free"));

The strings "static member" and "free" are not available for translation in the po-file.  Even if they were, it surely will not work in all languages to compose a sentence like this.  Please make it two separate strings with the complete sentences instead.
Comment 1 Andrew Pinski 2006-08-13 16:33:55 UTC
Confirmed.
Comment 2 Dirk Mueller 2006-10-30 23:32:45 UTC
Subject: Bug 28704

Author: mueller
Date: Mon Oct 30 23:32:29 2006
New Revision: 118208

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=118208
Log:
2006-10-30  Dirk Mueller  <dmueller@suse.de>

       PR c++/28704
       * decl.c (grokdeclarator): Duplicate diagnostic message
       for easier translation.


Modified:
    trunk/gcc/cp/ChangeLog
    trunk/gcc/cp/decl.c

Comment 3 Dirk Mueller 2006-10-30 23:33:03 UTC
Fixed for 4.3