re PR c++/28704 (%s substituted with "static member"/"free" can't be properly translated)

2006-10-30  Dirk Mueller  <dmueller@suse.de>

       PR c++/28704
       * decl.c (grokdeclarator): Duplicate diagnostic message
       for easier translation.

From-SVN: r118208